--- a/static/assets/sass/components/_footer.scss
+++ b/static/assets/sass/components/_footer.scss
@@ -1,9 +1,19 @@
-// footer area start
-.footer-logo {
-  max-width: 160px;
+.single-footer-widget {
+  .footer-logo {
+    max-width: 160px;
+  }
 }
+
 .subscription-form {
   margin-top: 10px;
+  label {
+    font-size: 18px;
+    font-weight: 600;
+    color: $ac-color-heading;
+    display: block;
+    font-family: $ac-font-heading;
+  }
+
   input {
     background: #f9f9f9;
     border: 1px solid #e3e3e3;
@@ -15,11 +25,10 @@
     position: relative;
     z-index: 1;
   }
-  .subscription-button {
+
+  .button {
     font-family: $ac-color-link;
     color: $ac-primary;
-    border-radius: 0 4px 4px 0;
-    padding: 0 13px;
     font-size: 16px;
     height: 40px;
     box-shadow: none;
@@ -29,67 +38,67 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 9;
+    z-index: 9 !important;
     background: transparent;
+
     &:hover {
       background-color: $ac-primary;
       color: $ac-white !important;
-      border: 1px solid $ac-primary;
+      outline: none;
+      box-shadow: none;
     }
   }
 }
-.subscription-form input[type="email"]:focus,
-.subscription-form input[type="email"]:hover {
-  outline: none;
-  box-shadow: none;
-  border: 1px solid $ac-primary;
-}
+
 .contact-information {
+  margin-top: 28px;
+
   h4 {
     font-size: 18px;
     color: $ac-color-heading;
   }
-  margin-top: 28px;
 }
+
+.all-contact-info li a,
+p.spam-message {
+  color: $ac-color-text;
+  display: inline-block;
+  font-size: 14px;
+  font-family: $ac-font-paragraph;
+  padding: 5px 0;
+}
+
 .all-contact-info {
   li {
     a {
-      color: $ac-color-value;
-      display: inline-block;
-      font-size: 14px;
-      font-family: $ac-color-text;
-      padding: 5px 0;
       span {
         padding-right: 10px;
       }
     }
   }
 }
-p.spam-message {
-  color: $ac-color-value;
-  display: inline-block;
-  font-size: 14px;
-  font-family: $ac-color-text;
-  padding: 5px 0;
-}
+
 .footer-menu {
   h4 {
     font-size: 18px;
     color: $ac-color-heading;
-    margin-bottom: 14px;
+    margin-bottom: 4px;
   }
 }
+
 .footer-link {
   li {
     a {
-      color: $ac-color-value;
+      color: $ac-color-text;
       font-size: 14px;
       display: block;
       padding: 8px 0;
       transition: 0.3s linear;
+
       &:last-child {
         padding-bottom: 0;
       }
+
       &:hover {
         color: $ac-primary;
         padding-left: 5px;
@@ -97,33 +106,45 @@ p.spam-message {
     }
   }
 }
+
 .footer-top {
-  background: #fbfdff;
-  padding: 50px 0;
+  padding: 50px 0 30px 0;
+  border-bottom: 1px solid $ac-white-light;
 }
+
 .footer-bottom {
   padding: 30px 0;
+  background-color: #fafafd;
+
   p {
     font-size: 14px;
     color: $ac-color-text;
     margin-bottom: 0;
   }
 }
+
 .footer-inline-link {
   a {
-    color: $ac-color-value;
+    color: $ac-color-link;
     font-size: 14px;
     margin-right: 30px;
+    transition: 0.3s ease-in-out;
+
     &:hover {
       color: $ac-primary;
     }
+
     &:last-child {
       margin-right: 0;
     }
   }
 }
-.social-link-inline {
+
+.socail-link-inline {
   li {
+    margin-right: 10px;
+    display: inline-block;
+
     a {
       color: #8a8a8a;
       font-size: 14px;
@@ -135,82 +156,94 @@ p.spam-message {
       border: 1px solid #8a8a8a;
       border-radius: 50%;
       transition: 0.3s ease-in-out;
+
       &:hover {
         background: $ac-primary;
-        color: #fff;
+        color: $ac-white;
         border: 1px solid transparent;
-        i{
-          animation: icon-animation 0.9s both;
-        }
       }
     }
+
     &:last-child {
       margin-right: 0;
     }
-    margin-right: 10px;
-    display: inline-block;
   }
 }
 
-@-webkit-keyframes icon-animation {
-  0% {
-    -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+/****************************************
+Responsive Classes
+*****************************************/
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 768px) {
+  .footer-area {
+    .footer-top {
+      // padding-top: 0;
+      .is-1-mobile {
+        .column {
+          padding: 0.25rem;
+        }
+      }
+    }
+    .single-footer-widget {
+      height: 100%;
+      text-align: center;
+      .footer-logo {
+        margin: 0 auto;
+      }
+      .subscription-form {
+        text-align: center;
+      }
+      .field.has-addons {
+        justify-content: center;
+      }
+    }
+    .footer-menu {
+      background-color: #4d4dcb0d;
+      height: 100%;
+      padding: 20px 5px;
+      border-radius: 4px;
+      &.is-info {
+        background-color: #0aafff2e;
+      }
+      &.is-danger {
+        background-color: #ea3d2f24;
+      }
+      &.is-warning {
+        background: #f7ad2a36;
+      }
+      &.is-success {
+        background-color: #27b06430;
+      }
+      h4 {
+        margin-bottom: 0;
+      }
+    }
+    .contact-information {
+      text-align: center;
+    }
   }
-  30% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
+  .footer-inline-link {
+    padding: 10px 0;
   }
-  40% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
-  }
-  50% {
-    -webkit-transform: scale3d(1.15, 0.85, 1);
-            transform: scale3d(1.15, 0.85, 1);
-  }
-  65% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
-  }
-  75% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
-  }
-}
-@keyframes icon-animation {
-  0% {
-    -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
-  }
-  30% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
-  }
-  40% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
-  }
-  50% {
-    -webkit-transform: scale3d(1.15, 0.85, 1);
-            transform: scale3d(1.15, 0.85, 1);
-  }
-  65% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
-  }
-  75% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+  .footer-bottom {
+    padding: 20px 0;
   }
 }
 
-// footer area end
+// Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) and (max-width: 768px) {
+  
+// }
+
+// Medium devices (tablets, 769px and up)
+@media (min-width: 769px) and (max-width: 1023.98px) {
+  
+}
+
+// Large devices (desktops, 1024px and up)
+@media (min-width: 1024px) and (max-width: 1215px) {
+}
+
+// Extra large devices (large desktops, 1216px and up)
+@media (min-width: 1216px) {
+}
