--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -1,8 +1,10 @@
 // blog page 2022
 .hero-area-blog {
   .blog-banner {
+    // background-color: #333333;
+    background-image: url(/assets/images/bg-image/pattern-bg.png);
     img {
-      object-fit: cover;
+      object-fit: contain;
     }
   }
   .blog-title-content {
@@ -143,6 +145,9 @@ ul.social-share-button {
       }
       &.twitter {
         background-color: #1da1f2;
+      }
+      &.github {
+        background-color: #171516;
       }
       &.linkedin {
         background-color: #0a66c2;
@@ -295,76 +300,83 @@ ul.social-share-button {
       }
     }
   }
+}
+.single-blog {
+  border: 1px solid $ac-white-light;
+  border-radius: 4px;
+  transition: 0.3s ease-in-out;
+  min-height: 400px;
+  overflow: hidden;
 
-  .blog-items {
-    .single-blog {
-      border: 1px solid $ac-white-light;
-      border-radius: 4px;
-      transition: 0.3s ease-in-out;
-      min-height: 425px;
-      &:hover {
-        border: 1px solid $ac-primary;
-        h2 {
-          text-decoration: underline;
-        }
-        a.inline-button {
-          &:after {
-            width: 100%;
-          }
-        }
+  &:hover {
+    border: 1px solid $ac-primary;
+    a {
+      img {
+        transform: scale(1.05);
       }
+    }
+    h2 {
       a {
-        img {
-          object-fit: cover;
-          border-radius: 4px 4px 0 0;
-        }
+        color: $ac-primary;
+      }
+    }
+    a.inline-button {
+      &:after {
+        width: 100%;
+      }
+    }
+  }
+  a {
+    img {
+      object-fit: cover;
+      border-radius: 4px 4px 0 0;
+      transition: 0.3s ease-in-out;
+    }
+  }
+
+  .meta {
+    justify-content: space-between;
+
+    flex-wrap: wrap;
+    .author {
+      .fa {
       }
 
-      .meta {
-        justify-content: space-between;
-
-        flex-wrap: wrap;
-        .author {
-          .fa {
-          }
-
-          a {
-            font-size: 14px;
-          }
-        }
-
-        .date {
-          .fa {
-          }
-
-          strong {
-            font-size: 14px;
-          }
-        }
-      }
-
-      h2 {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 130%;
-        margin-bottom: 15px;
-        transition: 0.3s ease-in-out;
-        a {
-          color: $ac-color-heading;
-        }
-      }
-
-      p {
-        font-weight: 400;
+      a {
         font-size: 14px;
-        line-height: 160%;
-        margin-bottom: 15px;
+      }
+    }
+
+    .date {
+      .fa {
       }
 
-      .inline-button {
-        .fa {
-        }
+      strong {
+        font-size: 14px;
       }
+    }
+  }
+
+  h2 {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    margin-bottom: 15px;
+    transition: 0.3s ease-in-out;
+    a {
+      color: $ac-color-heading;
+    }
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    margin-bottom: 15px;
+  }
+
+  .inline-button {
+    .fa {
     }
   }
 }
@@ -601,104 +613,104 @@ ul.social-share-button {
 }
 
 // single blog start
-.single-blog-item {
-  overflow: hidden;
-  transition: 0.3s ease-in-out;
+// .single-blog-item {
+//   overflow: hidden;
+//   transition: 0.3s ease-in-out;
 
-  &:hover {
-    border-radius: 0 0 4px 4px;
-    box-shadow: 0 2px 3px rgba(15, 80, 100, 0.16);
-    .blog-image {
-      transform: scale(1.3);
-    }
+//   &:hover {
+//     border-radius: 0 0 4px 4px;
+//     box-shadow: 0 2px 3px rgba(15, 80, 100, 0.16);
+//     .blog-image {
+//       transform: scale(1.3);
+//     }
 
-    .blog-description {
-      h2 {
-        a {
-          color: $ac-primary !important;
-        }
-      }
-    }
-  }
+//     .blog-description {
+//       h2 {
+//         a {
+//           color: $ac-primary !important;
+//         }
+//       }
+//     }
+//   }
 
-  .blog-image-wrapper {
-    border-radius: 4px 4px 0 0;
-    overflow: hidden;
+  // .blog-image-wrapper {
+  //   border-radius: 4px 4px 0 0;
+  //   overflow: hidden;
 
-    .blog-image {
-      background-size: cover;
-      background-position: center;
-      background-color: #ddd;
-      background-repeat: no-repeat;
-      height: 234px;
-      display: block;
-    }
-  }
+  //   .blog-image {
+  //     background-size: cover;
+  //     background-position: center;
+  //     background-color: #ddd;
+  //     background-repeat: no-repeat;
+  //     height: 234px;
+  //     display: block;
+  //   }
+  // }
 
-  .single-blog-content {
-    padding: 20px 20px;
-    border: 1px solid #eaebf5;
-    border-radius: 0 0 4px 4px;
-    border-top: transparent;
-    overflow: hidden;
-    min-height: 250px;
+  // .single-blog-content {
+  //   padding: 20px 20px;
+  //   border: 1px solid #eaebf5;
+  //   border-radius: 0 0 4px 4px;
+  //   border-top: transparent;
+  //   overflow: hidden;
+  //   min-height: 250px;
 
-    .blog-meta {
-      display: flex;
-      justify-content: space-between;
-      font-size: 14px;
-      margin-bottom: 10px;
+  //   .blog-meta {
+  //     display: flex;
+  //     justify-content: space-between;
+  //     font-size: 14px;
+  //     margin-bottom: 10px;
 
-      .meta-date {
-        i {
-          color: $ac-primary;
-          padding-right: 5px;
-        }
-      }
+  //     .meta-date {
+  //       i {
+  //         color: $ac-primary;
+  //         padding-right: 5px;
+  //       }
+  //     }
 
-      .meta-author {
-        a {
-          font-weight: 500;
-          text-align: right;
-          span {
-            color: $ac-color-text;
-            font-weight: 400;
-          }
-        }
-      }
-    }
+  //     .meta-author {
+  //       a {
+  //         font-weight: 500;
+  //         text-align: right;
+  //         span {
+  //           color: $ac-color-text;
+  //           font-weight: 400;
+  //         }
+  //       }
+  //     }
+  //   }
 
-    .blog-description {
-      overflow: hidden;
+  //   .blog-description {
+  //     overflow: hidden;
 
-      h2 {
-        a {
-          font-size: 16px;
-          line-height: 26px;
-          font-weight: 700;
-          display: block;
-          margin-bottom: 10px;
-          color: $ac-color-heading;
-        }
-      }
+  //     h2 {
+  //       a {
+  //         font-size: 16px;
+  //         line-height: 26px;
+  //         font-weight: 700;
+  //         display: block;
+  //         margin-bottom: 10px;
+  //         color: $ac-color-heading;
+  //       }
+  //     }
 
-      p {
-        margin-bottom: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        line-clamp: 3;
-        -webkit-line-clamp: 3;
-        box-orient: vertical;
-        -webkit-box-orient: vertical;
-      }
+  //     p {
+  //       margin-bottom: 10px;
+  //       overflow: hidden;
+  //       text-overflow: ellipsis;
+  //       display: -webkit-box;
+  //       line-clamp: 3;
+  //       -webkit-line-clamp: 3;
+  //       box-orient: vertical;
+  //       -webkit-box-orient: vertical;
+  //     }
 
-      .inline-button {
-        float: right;
-      }
-    }
-  }
-}
+  //     .inline-button {
+  //       float: right;
+  //     }
+  //   }
+  // }
+// }
 
 /*=================================================================================================
                                     Responsive code start
